--- a/Dash.html
+++ b/Dash.html
@@ -1,102 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./Dash.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
 
-  <body>
-    <div class="Main">
-      <div class="SideBar">
-        <h3>xiQ</h3>
-        <img src="./category.svg" alt="cate" class="Cat">
-        <img src="./profile.svg" alt="profile" class="Cat" />
-        <img src="./building.svg" alt="building" class="Cat">
-        <img src="./icons8-building-48.png" alt="icon" class="Cat">
-        <img src="./icons8-file-64.png" alt="icon" class="Cat">
-        <img src="./icons8-trophy-48.png" alt="icon" class="Cat">
-        <h3 class="vertical-text">
-          <span>Sales</span>
-          <span>xelerator</span>
-          <img style="padding-right:8px;" src="./icons8-logout-80.png" alt="icon" class="Cat">
-        </h3>
-        
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./Dash.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
 
-      <div class="Container">
-        <div class="NavBar">
-          <div class="HeaderParent">
-            <div class="LeftSide">
-              <h3>Microsoft Corporation</h3>
-            </div>
-            <div class="RightSide">
-              <div class="SearchContainer">
-                <div class="SearchIcon">
-                  <i class="fa fa-search"></i>
+<body>
+  <div class="Main">
+    <div class="SideBar">
+      <h3>xiQ</h3>
+      <img src="./category.svg" alt="cate" class="Cat" />
+      <img src="./profile.svg" alt="profile" class="Cat" />
+      <img src="./building.svg" alt="building" class="Cat" />
+      <img src="./icons8-building-48.png" alt="icon" class="Cat" />
+      <img src="./icons8-file-64.png" alt="icon" class="Cat" />
+      <img src="./icons8-trophy-48.png" alt="icon" class="Cat" />
+      <h3 class="vertical-text">
+        <span>Sales</span>
+        <span>xelerator</span>
+        <img style="padding-right: 8px" src="./icons8-logout-80.png" alt="icon" class="Cat" />
+      </h3>
+    </div>
 
-                  <hr
-                    style="
+    <div class="Container">
+      <div class="NavBar">
+        <div class="HeaderParent">
+          <div class="LeftSide">
+            <h3>Microsoft Corporation</h3>
+          </div>
+          <div class="RightSide">
+            <div class="SearchContainer">
+              <div class="SearchIcon">
+                <i class="fa fa-search"></i>
+
+                <hr style="
                       height: 20px;
                       width: 0.5px;
                       margin: 0%;
                       color: black 600;
-                    "
-                  />
+                    " />
 
-                  <input
-                    type="text"
-                    placeholder="Find the people and companies that ignite your next deal."
-                  />
-                </div>
-                <div class="Icon">
-                  <i class="fa fa-bell"></i>
-                  <img src="Avatar.jpeg" alt="Avatar" class="avatar" />
-                  <i class="fa fa-info-circle"></i>
-                </div>
+                <input type="text" placeholder="Find the people and companies that ignite your next deal." />
+              </div>
+              <div class="Icon">
+                <i class="fa fa-bell"></i>
+                <img src="Avatar.jpeg" alt="Avatar" class="avatar" />
+                <i class="fa fa-info-circle"></i>
               </div>
             </div>
           </div>
         </div>
-        <div class="Buttons">
-          <button>Overview</button>
-          <button>S.W.OT</button>
-          <button>Sales Triggers</button>
-          <button>Staff</button>
-          <button>Financials</button>
-          <button>Videos</button>
-          <button>Details</button>
-          <button>Competitors</button>
+      </div>
+      <div class="Buttons">
+        <button>Overview</button>
+        <button>S.W.OT</button>
+        <button>Sales Triggers</button>
+        <button>Staff</button>
+        <button>Financials</button>
+        <button>Videos</button>
+        <button>Details</button>
+        <button>Competitors</button>
+      </div>
+      <div class="Cards">
+        <div class="LeftSide2">
+          <div class="Header">
+            <img src="./logo-twitter-png-5872.png" alt="twitter" class="img" />
+            <img src="./WhatsApp Image 2024-04-12 at 8.32.48 PM.jpeg" alt="in" class="img" />
+          </div>
+          <div class="Profile2">
+            <img src="./WhatsApp Image 2024-04-13 at 6.43.52 PM.jpeg" alt="profile" class="Pro" />
+          </div>
+          <div class="Text">
+            <h3>
+              <b>Microsoft<br />Corporation</b>
+            </h3>
+          </div>
+          <div class="Found">
+            <p>
+              Founded:
+              &nbsp&nbsp1975<br /><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+              CEO:
+              <span style="color: rgba(145, 226, 22, 0.819)">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspStaya
+                Neddella</span><br /><br>
+
+              Industry: <span style="color: green">Computer...</span> <br /><br>
+              Website: <span style="color: green">microsoft.com</span> <br /><br>
+              Exchange: NasdaqGS <br /><br>
+              Fiscal Year: 06/30
+            </p>
+          </div>
         </div>
-        <div class="Cards">
-          <div class="LeftSide2">
-            <div class="Header">
-              <img
-                src="./logo-twitter-png-5872.png"
-                alt="twitter"
-                class="img"
-              />
-              <img src="./WhatsApp Image 2024-04-12 at 8.32.48 PM.jpeg" alt="in" class="img" />
+
+        <div class="RightSide2">
+          <div class="Header2">
+            <div class="LeftSide3">
+              <button class="Button2">Smart Account Plan</button>
+              <button class="Button2"> <img src="./profile.svg" alt="pro" class="Cat"> Create BRM</button>
+              <button class="Button2">Compare</button>
+            </div>
+            <div class="RightSide3">
+              <button class="Button2">Download</button>
+              <button class="Button2">Share</button>
             </div>
           </div>
-          <div class="RightSide2"></div>
+          <div class="Text2">
+            <div class="LeftText">
+              <p></p>Financial highlights foe Microsoft Corporation</p>
+            </div>
+            <div class="RightText">
+              <h5 style="color: green;">Financial details</h5>
+            </div>
+
+          </div>
+          <div class="Card2">
+            <div class="LeftCard">
+              <div class="Box1">
+                <p class="Box">USD $ <br> 227.6B <br>
+                  Revenue
+                </p>
+                <p class="Box">USD $ <br> 425.52 <br>
+                  Share Price
+                </p>
+                <p class="Box">USD $ <br> 3.1T <br>
+                  Market Cap
+                </p>
+
+
+              </div>
+              <div class="Box4">
+                <p class="Box2">221k <br>
+                  Employes</p>
+                  <p class="Box2"> 43.59% <br>
+                    operating Margin</p>
+              </div>
+
+            </div>
+            <div class="RightCard">
+              <img src="./WhatsApp Image 2024-04-13 at 9.10.02 PM.jpeg" alt="card" class="imgcard">
+              
+            </div>
+          </div>
+          <div>
+            <p>Microsoft Corporation, a global technology powerhouse, stands as one of the foremost pioneers in the digital realm. Established in 1975 by Bill Gates and Paul Allen, Microsoft has continually redefined the landscape of computing and software development. Renowned for its flagship products like Windows operating systems, Office productivity suite, and Azure cloud computing platform, Microsoft has become synonymous with innovation and reliability. Beyond software, the company has ventured into hardware with products like the Xbox ga</p>
+          </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
 
 <!-- <!DOCTYPE html>
