--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="Container">
         <div class="LeftPart">
-            <h1>facebook</h1>
+            <h1>Facebook</h1>
             <h3>Facebook helps you connect and share with the people in your life</h3>
 
         </div>
@@ -18,7 +18,7 @@
                 <form action="">
                 <input type="text" placeholder="Email address or phone number">
                 <input type="password" placeholder="Password ">
-                <button>Login</button>
+                <button><a href="./Dash.html" target="_blank">Login</a></button>
                  </form>
                  <p>Forget Password?</p>
                  <hr>
